# miuchi.chat

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  generate-icons.py
.github/workflows/: ci.yml  coverage-report.yml  deploy.yml  quality-gates.yml  security-scan.yml
devdocs/: api-specification.md  architecture.md  ci-cd-guide.md  database-design.md  deployment-guide.md  implementation-guide.md  implementation-spec-review.md  invitation-system.md  refactoring-plan.md  room-system.md
frontend/: .dockerignore  .env.development  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
frontend/src/__tests__/: setup.ts
frontend/src/components/: chat.rs
frontend/src/hooks/: useWebSocket.ts
migrations/: 001_create_users_table.sql  002_create_rooms_table.sql  003_create_messages_table.sql  004_create_room_members_table.sql  005_insert_default_data.sql  006_add_is_public_to_rooms.sql  007_remove_default_data.sql
scripts/: deploy.sh
src/: config.rs  error.rs  lib.rs  main.rs  ws.rs
src/api/: auth.rs  chat.rs  mod.rs  response.rs  search.rs
src/models/: message.rs  mod.rs  room.rs  user.rs
src/ws/: mod.rs  state.rs  types.rs
test/: package.json  pnpm-lock.yaml  ws_test.js
tests/: api_tests.rs  integration_tests.rs
tests/common/: mod.rs
(+25 files in other folders)
